--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.9.0",
     "commander": "^14.0.0",
     "dotenv": "^16.5.0",
-    "figlet": "^1.8.1"
+    "express": "^5.1.0",
+    "figlet": "^1.8.1",
+    "redis": "^5.5.5"
   }
 }
