--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "commander": "^14.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "figlet": "^1.8.1",
     "redis": "^5.5.5"
   }
